file-operations: Honor umask when creating new files

File creation mask should be honored when creating new files from
templates as it is when creating new folders, or dragging raw data.
This is because G_FILE_COPY_NONE flag is specified when creating new
files from templates. Let's use G_FILE_COPY_TARGET_DEFAULT_PERMS flag
to ensure that file creation mask is honored in this case.

Just note that this behavior is not wanted when copying in general
(although it is also honored by "cp" in this case) as it might have
some unexpected consequences as discussed on:
https://bugzilla.gnome.org/show_bug.cgi?id=167102